...
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#f5fbff"
        app:titleTextColor="#fff"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textchossenmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Realtime"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
...
